--- a/mainDiscrete.ipynb
+++ b/mainDiscrete.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,23 +16,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "G = nx.complete_graph(10)"
+    "G = nx.complete_graph(range(1, 11))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[(3, 0), (0, 2), (2, 4), (4, 5), (5, 6), (6, 7), (7, 8), (8, 9), (9, 1)], [(5, 0), (0, 1), (1, 2), (2, 3), (3, 4), (4, 6), (6, 7), (7, 8), (8, 9)], [(2, 0), (0, 1), (1, 3), (3, 4), (4, 5), (5, 6), (6, 8), (8, 9), (9, 7)], [(8, 0), (0, 1), (1, 2), (2, 3), (3, 5), (5, 6), (6, 7), (7, 9), (9, 4)], [(6, 0), (0, 1), (1, 2), (2, 3), (3, 5), (5, 7), (7, 8), (8, 9), (9, 4)], [(7, 0), (0, 1), (1, 2), (2, 3), (3, 4), (4, 5), (5, 8), (8, 9), (9, 6)], [(3, 0), (0, 1), (1, 2), (2, 4), (4, 6), (6, 7), (7, 8), (8, 9), (9, 5)], [(7, 0), (0, 1), (1, 2), (2, 4), (4, 5), (5, 6), (6, 8), (8, 9), (9, 3)], [(3, 0), (0, 1), (1, 2), (2, 5), (5, 6), (6, 7), (7, 8), (8, 9), (9, 4)], [(4, 0), (0, 1), (1, 2), (2, 3), (3, 5), (5, 7), (7, 8), (8, 9), (9, 6)]]\n"
+      "[[(10, 2), (2, 3), (3, 4), (4, 5), (5, 6), (6, 7), (7, 8), (8, 9), (9, 1)], [(9, 1), (1, 2), (2, 3), (3, 4), (4, 6), (6, 7), (7, 8), (8, 10), (10, 5)], [(7, 1), (1, 2), (2, 3), (3, 4), (4, 5), (5, 8), (8, 9), (9, 10), (10, 6)], [(2, 1), (1, 3), (3, 4), (4, 5), (5, 6), (6, 7), (7, 8), (8, 10), (10, 9)], [(4, 1), (1, 3), (3, 5), (5, 6), (6, 7), (7, 8), (8, 9), (9, 10), (10, 2)], [(2, 1), (1, 3), (3, 4), (4, 5), (5, 6), (6, 7), (7, 9), (9, 10), (10, 8)], [(2, 1), (1, 4), (4, 5), (5, 6), (6, 7), (7, 8), (8, 9), (9, 10), (10, 3)], [(8, 1), (1, 2), (2, 3), (3, 4), (4, 5), (5, 6), (6, 7), (7, 9), (9, 10)], [(1, 2), (2, 3), (3, 4), (4, 5), (5, 6), (6, 8), (8, 9), (9, 10), (10, 7)], [(7, 2), (2, 3), (3, 4), (4, 5), (5, 6), (6, 8), (8, 9), (9, 10), (10, 1)]]\n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
